проведенна оптимизация 12#